--- a/src/form/secondForm.css
+++ b/src/form/secondForm.css
@@ -201,12 +201,14 @@ body {
 }
 
 
-.userInput {
+.UserInput {
     display: flex;
-    justify-content: center;
+    justify-content: left;
+    flex-direction: column;
+    position: relative;
 }
 
-input {
+.OtpField {
     margin: 2px;
     width: 35px;
     height: 35px;
@@ -215,5 +217,30 @@ input {
     background: #FBFBFD;
     border: 1px solid #99BBFF;
     border-radius: 3px;
-    
+
+}
+
+.UserInput .CheckBox {
+    display: flex;
+    margin-top: 14px;
+    text-align: left;
+}
+
+.UserInput .CheckBox label {
+    font-weight: 500;
+    font-size: 14px;
+    color: #8F90A6;
+    margin-left: 8px;
+    width: 365px;
+    height: 31px;
+    line-height: 15px;
+}
+
+.UserInput .CheckBox input {
+    width: 24px;
+    height: 24px;
+    background: #FBFBFD;
+    border: 1px solid #99BBFF;
+    border-radius: 4px;
+    margin: 0;
 }
