--- a/src/form/secondForm.css
+++ b/src/form/secondForm.css
@@ -64,7 +64,7 @@ body {
 
 .FormContent form .NumbersForm {
     width: 950px;
-    height: 883px;
+    height: 877px;
     position: relative;
     display: flex;
     flex-direction: row;
@@ -164,7 +164,7 @@ body {
 
 .FormContent form .NumbersForm .NumbersFormData {
     width: 596px;
-    height: 856px;
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -174,6 +174,10 @@ body {
     font-weight: 500;
     font-size: 14px;
     color: #000000;
+}
+
+.FormContent form .NumbersForm .NumbersFormData div {
+    height: 45px;
 }
 
 .FormContent form .NumbersForm .NumbersFormData .SelectStyle {
@@ -243,4 +247,34 @@ body {
     border: 1px solid #99BBFF;
     border-radius: 4px;
     margin: 0;
+}
+
+.BirthDateContent {
+    width: 596px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 6px;
+}
+
+.BirthDate {
+    width: 377px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 6px;
+}
+
+.Datetime {
+    width: 191px;
+    height: 36px;
+    border: 1px solid #99BBFF;
+    border-radius: 6px;
+    padding-left: 12px;
+    color: #8F90A6;
+    font-weight: 500;
+    font-size: 14px;
+    cursor: pointer;
 }
