--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,47 @@
 *{
-  padding: 0px;
   margin: 0px;
-  box-sizing: border-box;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 }
 
-body, html, #root {
+header{
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   background-color: #1168DA;
 }
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 
-
-
-
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #1168DA;
-
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-
-
-
-
-body {
-  margin: 0;
+#container{
+  color: white;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: space-around;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  
+#message{
+  margin-top: 22%;
+  font-size: 1.3em;
 }
 
+#text2{
+  font-weight: 900;
+  font-size: 4em;
+}
 
-  
+#text{
+  text-align: left;
+}
+
+#imgMed{
+  width: 100%;
+  height: 100%;
+}
+
+#btSingin{
+  color: white;
+  margin-top: 10%;
+  background-color: rgb(0, 190, 204);
+  font-size: 1.3em;
+  width: 200px;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+}
+
