--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -8,9 +8,8 @@
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  text-align: center;
+  width: 100vw;
+  height: 100vh;
   background-image: url("../../assets/Rectangle 1.png");
 }
 
@@ -35,8 +34,8 @@ body {
 .Main {
   display: flex;
   width: 100%;
-  margin-top: 136px;
   justify-content: space-between;
+  align-items: center;
 }
 
 .Doctor-Image {
@@ -46,17 +45,19 @@ body {
   bottom: 0;
 }
 
-
 form {
+  position: absolute;
+  top: 287px;
+  left: 772px;
   width: 532px;
   height: 609px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   background-color: #ffffff;
   border-radius: 16px;
   z-index: 1;
-  margin-top: 120px;
 }
 
 form h2 {
@@ -167,9 +168,9 @@ button {
   animation: all ease-in-out;
 }
 
-button:hover{
-  transition-duration: .2s;
-  background-color: #1168DA;
+button:hover {
+  transition-duration: 0.2s;
+  background-color: #1168da;
 }
 
 .not-registered {
