--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,24 +1,22 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
 
 #root {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 1440px;
-    height: 1024px;
-    max-width: 1440px;
-    max-height: 1024px; 
+  width: 100%;
+  height: 100%;
+  max-width: 1440px;
+  max-height: 1024px;
+  overflow: hidden;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    position: relative;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
