Adicionando rotas e page admin

--- a/src/componets/admin/instituicao/navbar/navbar.css
+++ b/src/componets/admin/instituicao/navbar/navbar.css
@@ -1,6 +1,7 @@
 .navbar {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background-color: #F5F5F5;
     overflow: auto;
 }
