--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,12 +1,10 @@
 .Header {
   width: 100%;
+  max-width: 1440px;
+  padding: 3.5rem 8.4375rem 8.4375rem 12.3125rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 135px;
-  padding-right: 135px;
-  padding-top: 66px;
-  z-index: 1;
 }
 
 .Menu-Links ul {
