routes de login e cadastro

--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -7,25 +7,6 @@
   --color-btn-off: #4d7cfe66;
 }
 
-body {
-  width: 100vw;
-  height: 100vh;
-}
-
-#root {
-  width: 100%;
-  height: 100%;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  background-image: url("../../assets/Background.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
 .Main {
   display: flex;
   align-items: center;
@@ -47,12 +28,19 @@ form {
   align-items: center;
   width: 100%;
   height: 100%;
+  text-align: center;
+  margin-right: 8.5rem;
+  border-radius: 1rem;
+  background-color: #ffffff;
+}
+
+.formName {
   max-width: 33.25rem;
   max-height: 38.0625rem;
-  text-align: center;
-  background-color: #ffffff;
-  border-radius: 1rem;
-  margin-right: 8.5rem;
+}
+
+.formRegister-donor {
+  max-width: 33.25rem;
 }
 
 form h2 {
@@ -86,9 +74,15 @@ form label {
 }
 
 .email,
-.password {
+.password,
+.telefone,
+.nome {
   display: flex;
   flex-direction: column;
+}
+
+.password {
+  position: relative;
 }
 
 .inputs input {
@@ -106,11 +100,7 @@ form label {
   color: var(--color-border-input);
 }
 
-.password {
-  position: relative;
-}
-
-.password img {
+.inputs img {
   width: 20px;
   height: 20px;
   position: absolute;
@@ -128,7 +118,7 @@ form label {
   align-items: center;
   width: 100%;
   max-width: 33.25rem;
-  padding: 2rem 3.5rem 1.5rem 3.5rem;
+  padding: 2rem 3.5rem 0 3.5rem;
   font-size: 14px;
   font-family: "Poppins", sans-serif;
 }
@@ -163,7 +153,7 @@ button {
   width: 22.5rem;
   max-width: 22.2rem;
   height: 3.125rem;
-  margin-bottom: 1.5rem;
+  margin: 1.5rem 0;
   font-family: "Poppins", sans-serif;
   color: white;
   border: none;
