--- a/src/style/global.css
+++ b/src/style/global.css
@@ -4,3 +4,19 @@
   box-sizing: border-box;
   text-decoration: none;
 }
+
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
+.container-auth {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-image: url("../assets/Background.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
