--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+  background: #1168DA;
+  background-image: url(../src/assets/BackgroundVector.svg);
+  width: auto;
+  height: 100vh;
+  margin: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right 0% bottom 90%;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
