--- a/src/pages/admin/Admin/components/WhiteCard/style.css
+++ b/src/pages/admin/Admin/components/WhiteCard/style.css
@@ -1,4 +1,5 @@
-.doadores {
+.card-container {
+    margin-left: 1rem;
     background-color: white;
     border: 2px solid #19355C;
     box-shadow: 2px 2px 2px 2px #00978F;
@@ -6,15 +7,17 @@
     color: #00978F;
     max-width: 10rem;
     margin-top: 2rem;
-    padding: 1rem;
+    padding: 1rem ;
+
+    
 }
 
-.doadores h3 {
+.card-container h3 {
     color: #19355C;
 
 }
 
-.doadores a {
+.card-container a {
     color: #00978F
     ;
 
