--- a/src/pages/auth/login/index.css
+++ b/src/pages/auth/login/index.css
@@ -7,22 +7,30 @@
   --color-btn-off: #4d7cfe66;
 }
 
+#root {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(../../../assets/authenctication/Background.svg);
+}
+
 .Main {
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
 
-picture {
+.picture-login {
   display: flex;
   align-items: end;
   height: 100%;
 }
 
-picture img {
+.picture-login img {
   width: 100%;
 }
 
-form {
+.formName {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,17 +44,18 @@ form {
 
 .formName {
   max-width: 33.25rem;
-  max-height: 38.0625rem;
+  /* max-height: 38.0625rem; */
 }
 
 .formRegister-donor, .formUserRegister {
   max-width: 33.25rem;
 }
 
-form h2 {
+.formName h2 {
   width: 100%;
   margin-top: 1.625rem;
-  margin-bottom: 1rem;
+  margin-bottom: 3.125rem;
+  padding-bottom: 1rem;
   max-width: 23.75rem;
   color: var(--color-h2);
   font-weight: 700;
@@ -72,8 +81,9 @@ form h2 {
   color: var(--color-h2);
 }
 
-form label {
+.formName label {
   text-align: start;
+  font-weight: 400;
   color: var(--color-label);
   margin-left: 3.5rem;
   margin-right: 3.5rem;
@@ -91,14 +101,20 @@ form label {
 
 .email,
 .password,
+.password-repeat,
 .telefone,
 .nome {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
-.password {
-  position: relative;
+.eye {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 70px;
+  bottom: 10px;
 }
 
 .inputs input {
@@ -116,15 +132,11 @@ form label {
   color: var(--color-border-input);
 }
 
-.inputs img {
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  right: 70px;
-  bottom: 10px;
-}
+/* .inputs{
+  position: relative;
+} */
 
-.inputs img:hover {
+.inputs .eye:hover {
   cursor: pointer;
 }
 
@@ -132,14 +144,15 @@ form label {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 420px;
   max-width: 33.25rem;
   padding: 2rem 3.5rem 0 3.5rem;
   font-size: 14px;
   font-family: "Poppins", sans-serif;
 }
 
-.forgot-password a {
+.forgot-password .rememberLink {
+  text-decoration: none;
   font-weight: 700;
   color: var(--color-link1);
 }
@@ -163,7 +176,7 @@ form label {
   cursor: pointer;
 }
 
-button .login-btn {
+.auth-btn {
   font-weight: 700;
   font-size: 14px;
   width: 22.5rem;
@@ -180,7 +193,7 @@ button .login-btn {
   animation: all ease-in-out;
 }
 
-button:hover .login-btn {
+.auth-btn:hover {
   transition-duration: 0.2s;
   background-color: #1168da;
 }
@@ -198,12 +211,13 @@ button:hover .login-btn {
   border-top: 1px solid #98a9bc;
 }
 
-.not-registered p {
-  font-weight: 500;
+.registered p {
+  font-weight: 600;
   color: #4d7cfe;
 }
 
-.not-registered a {
+ .link {
+  text-decoration: none;
   font-weight: 900;
   color: #1168da;
 }
