ajustando tela e descomentando emailRef()

--- a/src/pages/auth/components/header/index.css
+++ b/src/pages/auth/components/header/index.css
@@ -1,5 +1,5 @@
 .headerl {
-  width: 100%;
+  width: auto;
   max-width: 1440px;
   padding: 3.5rem 8.4375rem 8.4375rem 12.3125rem;
   display: flex;
