--- a/src/pages/admin/Admin/components/WhiteCard/style.css
+++ b/src/pages/admin/Admin/components/WhiteCard/style.css
@@ -1,5 +1,4 @@
 .card-container {
-    margin-left: 1rem;
     background-color: white;
     border: 2px solid #19355C;
     box-shadow: 2px 2px 2px 2px #00978F;
@@ -8,17 +7,19 @@
     max-width: 10rem;
     margin-top: 2rem;
     padding: 1rem ;
-
-    
 }
 
 .card-container h3 {
     color: #19355C;
-
 }
 
 .card-container a {
-    color: #00978F
-    ;
+    color: #00978F;
+}
 
+.img-container {
+    background-color: #FFD1D1;
+    width: fit-content;
+    padding: 0.375rem;
+    border-radius: 6px;
 }
