--- a/src/pages/admin/Admin/style.css
+++ b/src/pages/admin/Admin/style.css
@@ -1,17 +1,21 @@
 .rowC {
     display: flex;
-    flex-direction: row;
 }
 
-.background {
+.admin-background {
     background-color: #F5F5F5;
     width: 100%;
     height: 100vh;
-} 
+}
 
-.linha {
+.admin-main {
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.cards-row {
     display: flex;
-    align-items: flex-start;
-    flex-direction: row;
+    justify-content: space-between;
 }
 
