--- a/src/pages/admin/components/BlueNavbar/style.css
+++ b/src/pages/admin/components/BlueNavbar/style.css
@@ -1,9 +1,10 @@
 .navbar {
+    height: 100vh;
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: #1168DA;
-    overflow: auto;
 }
 
 .navbar a {
