--- a/src/pages/admin/components/WhiteNavbar/style.css
+++ b/src/pages/admin/components/WhiteNavbar/style.css
@@ -1,9 +1,10 @@
 .navbari {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color:#FEFEFE;
-    overflow: auto;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color:#FEFEFE;
 }
 
 .navbari a {
