--- a/src/pages/admin/Admin/style.css
+++ b/src/pages/admin/Admin/style.css
@@ -5,12 +5,11 @@
 .admin-background {
     background-color: #F5F5F5;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .admin-main {
     width: 80%;
-    max-width: 800px;
     margin: 0 auto;
 }
 
