--- a/src/pages/admin/components/Header/style.css
+++ b/src/pages/admin/components/Header/style.css
@@ -1,20 +1,40 @@
 .admin-header {
+    width: 80%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 3.75rem auto 5rem;
 }
 
 .admin-header h3 {
     color: #19355C;
 }
 
-.admin-header img {
-    margin-top: 1rem;
+.header-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.header-buttons a {
+    background-color: #FFFFFF;
+    border-radius: 6px;
+    padding: 0.5rem;
+}
+
+.admin-header button img {
+    margin-left: 1rem;
 }
 
 .admin-header button {
     background-color: #1168DA;
-    margin-top: 1rem;
-    margin-left: 1.75rem; 
-    height: 3rem;
+    color: #FFFFFF;
+    font-family: 'Poppins' sans-serif;
+    font-size: 1.25rem;
+    font-weight: 700;
+    border: none;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+    margin-left: 2.25rem;
 }
