--- a/src/pages/admin/Admin/components/MainCard/style.css
+++ b/src/pages/admin/Admin/components/MainCard/style.css
@@ -1,25 +1,43 @@
-.section {
-    background-color: white;
-    border: 2px solid #19355C;
-    box-shadow: 2px 2px 2px 2px #00978F;
-    text-align: start;
-    border-radius: 5px;
+.main-card {
+    background-color: #FFFFFF;
     color: #00978F;
-    margin-top: 2rem;
-    padding: 1rem;
+    text-align: start;
+    border-radius: 10px;
+    padding: 2rem;
     display: flex;
+    justify-content: space-between;
+
+    box-shadow: 4px -4px 10px rgba(17, 104, 218, 0.25), -4px 4px 10px rgba(17, 104, 218, 0.25);
 }
 
-.section a {
+.main-card h3 {
     color: #19355C;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 1.75rem;
+    line-height: 2.625rem;
+    margin: 0;
+    margin-bottom: 0.5rem;
 }
 
-/*.section img {
-    position: absolute;
-    align-items: flex-end;
-    height: 100%;
-    left: 30rem;
-    bottom: 10rem;
-    width: 15rem;
-	
+.main-card p {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin-bottom: 8rem;
+}
+
+.main-card a {
+    color: #19355C;
+    font-family: 'Nunito Sans', sans-serif;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+}
+
+
+.main-card a img {
+    margin-left: 1rem;
 }
