--- a/src/pages/admin/components/Header/style.css
+++ b/src/pages/admin/components/Header/style.css
@@ -8,6 +8,10 @@
 
 .admin-header h3 {
     color: #19355C;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.75rem;
+    font-weight: 900;
+    line-height: 2.625rem;
 }
 
 .header-buttons {
@@ -28,7 +32,7 @@
 .admin-header button {
     background-color: #1168DA;
     color: #FFFFFF;
-    font-family: 'Poppins' sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.25rem;
     font-weight: 700;
     border: none;
