--- a/src/pages/admin/Admin/style.css
+++ b/src/pages/admin/Admin/style.css
@@ -5,7 +5,7 @@
 .admin-background {
     background-color: #F5F5F5;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     padding-bottom: 2rem;
 }
 
