--- a/src/pages/admin/Admin/components/WhiteCard/style.css
+++ b/src/pages/admin/Admin/components/WhiteCard/style.css
@@ -14,6 +14,7 @@
     font-family: 'Nunito Sans', sans-serif;
     font-size: 1rem;
     font-weight: 900;
+    margin: 1rem 0;
 
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
