--- a/src/pages/admin/components/BlueNavbar/style.css
+++ b/src/pages/admin/components/BlueNavbar/style.css
@@ -15,6 +15,11 @@
     display: inline-block;
   }
 
+  .navbar a img {
+    width: 3rem;
+    height: 3rem;
+  }
+
   .rowC {
     display: flex;
     flex-direction: row;
