--- a/src/pages/auth/login/index.css
+++ b/src/pages/auth/login/index.css
@@ -4,7 +4,8 @@
   --color-border-input: #d1d1d1;
   --color-link1: #4d7cfe;
   --color-p: #778ca2;
-  --color-btn-off: #4d7cfe66;
+  --color-btn: #1168da;
+  --color-btn-hover: #0d4c9d;
 }
 
 *{
@@ -95,7 +96,7 @@
 .inputs {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   width: 100%;
   font-weight: 400;
   font-size: 14px;
@@ -113,6 +114,13 @@
   display: flex;
   flex-direction: column;
   position: relative;
+}
+
+.error {
+  color: rgb(225, 98, 98);
+  text-align: start;
+  margin-left: 3.5rem;
+
 }
 
 .eye {
@@ -142,33 +150,6 @@
   cursor: pointer;
 }
 
-.forgot-password {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 420px;
-  max-width: 33.25rem;
-  padding: 2rem 3.5rem 0 3.5rem;
-  font-size: 14px;
-  font-family: "Poppins", sans-serif;
-}
-
-.forgot-password .rememberLink {
-  text-decoration: none;
-  font-weight: 700;
-  color: var(--color-link1);
-}
-
-.forgot-password p {
-  font-weight: 500;
-  color: var(--color-p);
-}
-
-.remember-password {
-  display: flex;
-  align-items: center;
-}
-
 #checkbox {
   width: 24px;
   height: 24px;
@@ -184,12 +165,12 @@
   width: 22.5rem;
   max-width: 22.2rem;
   height: 3.125rem;
-  margin: 1.5rem 0;
+  margin: 0.5rem 0;
   font-family: "Poppins", sans-serif;
   color: white;
   border: none;
   border-radius: 4px;
-  background-color: var(--color-btn-off);
+  background-color: var(--color-btn);
   position: relative;
   cursor: pointer;
   animation: all ease-in-out;
@@ -197,7 +178,7 @@
 
 .auth-btn:hover {
   transition-duration: 0.2s;
-  background-color: #1168da;
+  background-color: var(--color-btn-hover);
 }
 
 .registered {
@@ -208,7 +189,7 @@
   align-items: center;
   justify-content: center;
   gap: 16px;
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-bottom: 1rem;
   border-top: 1px solid #98a9bc;
 }
