--- a/src/pages/admin/AdminOrgan/components/Table/style.css
+++ b/src/pages/admin/AdminOrgan/components/Table/style.css
@@ -1,18 +1,23 @@
 .table {
-    border-collapse: separate;
-    border-spacing: 0 2rem;
-    font-family: 'Poppins', sans-serif;
-    color: #535353;
-    width: 80%;
-    margin: 0 auto;
+  border-collapse: separate;
+  border-spacing: 0 2rem;
+  font-family: "Poppins", sans-serif;
+  color: #535353;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .table-body-row {
-    background-color: #FFFFFF;
-    font-size: 1rem;
-    line-height: 1.25rem;
+  background-color: #ffffff;
+  font-size: 1rem;
+  line-height: 1.25rem;
 }
 
-.table-body-row td {   
-    padding: 1.25rem;
+.table-body-row td {
+  padding: 1.25rem;
+}
+
+.action-td {
+  display: flex;
+  justify-content: center;
 }
