--- a/src/pages/admin/components/Search/style.css
+++ b/src/pages/admin/components/Search/style.css
@@ -1,36 +1,43 @@
 .search {
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 .search h3 {
-    color: #00978F;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.75rem;
-    font-weight: 600;
+  color: #00978f;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.75rem;
+  font-weight: 600;
 }
 
 .search input {
-    background-color: white;
-    border: none;
-    border-radius: 9px;
-    padding: 1rem;
+  background-color: white;
+  border: none;
+  border-radius: 9px;
+  padding: 1rem;
 }
 
 .register-button {
-    background-color: transparent;
-    color: #778CA2;
-    font-size: 0.75rem;
-    font-weight: 700;
-    border: none;
-    cursor: pointer;
-    line-height: 2rem;
+  background-color: transparent;
+  color: #778ca2;
+  font-size: 0.75rem;
+  font-weight: 700;
+  border: none;
+  cursor: pointer;
+  line-height: 2rem;
 }
 
 .register-button:hover {
-    color: #00978F;
+  color: #00978f;
+}
+
+.admin-select-borderless {
+  background-color: white;
+  border: none;
+  border-radius: 9px;
+  padding: 1rem;
 }
