--- a/src/pages/admin/components/UserCreationModal/style.css
+++ b/src/pages/admin/components/UserCreationModal/style.css
@@ -19,6 +19,7 @@
   border: none;
   border-radius: 9px;
   padding: 1rem 2rem;
+  cursor: pointer;
 }
 
 .cancel-button {
@@ -29,4 +30,14 @@
   border-radius: 9px;
   padding: 1rem 2rem;
   margin-right: 2rem;
+  cursor: pointer;
+}
+
+.close {
+  background-color: transparent;
+  color: #1168da;
+  border-color: #1168da;
+  border-radius: 9px;
+  cursor: pointer;
+  margin-bottom: 1rem;
 }
