--- a/src/pages/home/components/article.css
+++ b/src/pages/home/components/article.css
@@ -1,47 +1,57 @@
-*{
+* {
   margin: 0px;
 }
 
-#article{
+#article {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.btnSingin{
-  color: white;
-  margin-left: 5%;
-  margin-top: 10%;
-  background-color: rgb(0, 190, 204);
-  font-size: 1em;
-  width: 350px;
-  height: 80px;
-  border-radius: 50px;
+.btnSingin {
+  width: 374px;
+  height: 92px;
+  left: 864px;
+  top: 4199px;
+  background: #0094FF;
+  border-radius: 40px;
   border: none;
   cursor: pointer;
+  margin-bottom: 46px;
 }
 
-.btnRC{
-  color: white;
+.btnSingin a {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  color: #FFFFFF;
   text-decoration: none;
 }
 
-.h2{
+
+.h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 42px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  margin-top: 10px;
-  margin-bottom: 15px;
-  font-size: 25px;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  color: rgb(80, 80, 80);
-  font-weight:900 ;
+  justify-content: center;
+  text-align: center;
+  color: #464646;
+  margin-top: 99px;
 }
 
-.imgArt{
-  width: 60%;
-  height: 60%;
+.imgArt {
+  width: 100%;
+  height: 100%;
 }
 
-.section1, .section2{
+.section1, .section2 {
   margin-top: 3%;
   width: 80%;
   display: flex;
@@ -49,47 +59,84 @@
   align-items: center;
 }
 
-.section1{
-  margin-left: 10%;
+.section1 {
+  display: flex;
+  justify-content: space-around;
+  margin: 40px auto;
 }
 
-.section2{
-  margin-left: 17%;
-  margin-bottom: 3%;
+.section2 {
+  width: 1684px;
+  height: 496px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 64px;
 }
 
-.h3-1{
+.section2 div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 46px 0;
+}
+
+.h3-1 {
   margin-top: 10px;
   margin-bottom: 15px;
   font-size: 25px;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   color: rgb(80, 80, 80);
-  font-weight:900 ;
-  }
-
-.h3{
-margin-left: 3%;
-margin-top: 10px;
-margin-bottom: 15px;
-font-size: 25px;
-font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-color: rgb(80, 80, 80);
-font-weight:900 ;
+  font-weight: 900;
 }
 
-.wD{
-font-size: 25px;
-width: 50%;
+.h3 {
+  margin-top: 10px;
+  margin-bottom: 84px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  color: #464646;
+  width: 766px;
 }
 
-.rM{
-font-size: 16px;
-  font-family: 'Verdana';
-  font-weight: bold;
+.wD {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  font-size: 25px;
+  width: 741px;
+  height: 717px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+}
+
+.wD span {
+  padding: 30px;
+}
+
+.wD-container {
+  display: flex;
+  justify-content: space-between;
+  width: 1555px;
+}
+
+.rM {
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  color: #FFFFFF;
   text-decoration: none;
   padding: 10px 15px;
   margin-top: 15px;
-  color: #ffffff;
-  background-color: #1168DA;
-  border-radius: 25px;
+  width: 275px;
+  height: 55px;
+  background: #0094FF;
+  cursor: pointer;
 }
