--- a/src/pages/home/components/home.css
+++ b/src/pages/home/components/home.css
@@ -1,6 +1,9 @@
-*{
-    margin: 0px;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
 
 #home{
     background-color: white;
